# gdb_cli_tools

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  design.md  final_feature.md
docs/: agent_actions.en.md  agent_actions.md  evidence_model.en.md  evidence_model.md  task_format.md
docs/ai/: current_goal.md  decision.md  handoff.md  next_cli_task.md  progress.md
examples/: breakpoint_replay.jsonl  on_hit_replay.jsonl  segfault.cpp  segfault_report.md  segfault_task.md
scripts/: smoke_daemon_action_flow.sh  smoke_segfault_demo.sh
src/: cli.cpp  cli.hpp  main.cpp
src/async/: task.hpp
src/common/: json.cpp  json.hpp  string_utils.cpp  string_utils.hpp
src/evidence/: evidence_store.cpp  evidence_store.hpp
src/gdb/: command_result.hpp  gdb_process.cpp  gdb_process.hpp  gdb_session.cpp  gdb_session.hpp  mi_utils.cpp  mi_utils.hpp
src/report/: report.cpp  report.hpp
src/task/: debug_task.cpp  debug_task.hpp
src/workflow/: crash_workflow.cpp  crash_workflow.hpp
tests/: mi_summary_tests.cpp
